--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ a {
   z-index: 999;
   min-width: 320px;
   height: 100vh;
-  background: url(../../assets/images/HeaderBackground.png) 0 0/cover no-repeat;
+  background: url(../assets/images/HeaderBackground.png) 0 0/cover no-repeat;
   padding: 34.22vh 18px 13.92vh;
 }
 .header__column {
@@ -228,7 +228,7 @@ a {
   position: relative;
 }
 .header__scroll::after {
-  content: url(../../assets/images/icons/chevron-down.svg);
+  content: url(../assets/images/icons/chevron-down.svg);
   position: absolute;
   bottom: 0;
   right: 50%;
@@ -398,7 +398,7 @@ a {
 .motivation {
   min-width: 320px;
   min-height: 630px;
-  background: url(../../assets/images/WhyBackground.png) 0 0/cover no-repeat;
+  background: url(../assets/images/WhyBackground.png) 0 0/cover no-repeat;
 }
 .motivation__column {
   min-width: 100%;
@@ -499,11 +499,11 @@ a {
 }
 
 .box--bg1 {
-  background: url(../../assets/images/book-now-spain.png) 0 0/cover no-repeat;
+  background: url(../assets/images/book-now-spain.png) 0 0/cover no-repeat;
 }
 
 .box--bg2 {
-  background: url(../../assets/images/book-now-2.png) 0 0/cover no-repeat;
+  background: url(../assets/images/book-now-2.png) 0 0/cover no-repeat;
 }
 
 .box-card {
@@ -540,7 +540,7 @@ a {
   width: 320px;
   min-width: 100%;
   min-height: 100%;
-  background: url(../../assets/images/Review-BG.png) 0 0/cover no-repeat;
+  background: url(../assets/images/Review-BG.png) 0 0/cover no-repeat;
   padding: 0 0 120px 0;
 }
 .rewiew__column {
