change url font-face

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -16,5 +16,5 @@
 }
 @font-face {
   font-family: "icons";
-  src: url(../assets/fonts/icons.woff);
+  src: url(../assets/fonts/);
 }/*# sourceMappingURL=fonts.css.map */
