add url f-f icons

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -16,5 +16,5 @@
 }
 @font-face {
   font-family: "icons";
-  src: url(../assets/fonts/);
+  src: url(../assets/fonts/icons.woff);
 }/*# sourceMappingURL=fonts.css.map */
